--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
 - TOX_ENV=flake8
 - TOX_ENV=test
 install:
-- pip install tox python-coveralls 
+- pip install tox coveralls 
 
 branches:
   only:
@@ -17,4 +17,5 @@ script:
 - tox -e $TOX_ENV
 
 after_success:
+  - coverage report
   - coveralls
