--- a/tox.ini
+++ b/tox.ini
@@ -4,12 +4,14 @@ skipsdist=True
 
 [testenv:flake8]
 deps =
+	coverage
     flake8
 commands =
 	flake8 --exclude=migrations,venv,.tox --count --show-source 
 
 
 [testenv:test]
-
+deps =
+	coverage
 commands =
 	python -m unittest
