--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ deps =
     flake8
 commands =
 	flake8 --exclude=migrations,venv,.tox --count --show-source 
+	coverage run tox -e flake8
 
 
 [testenv:test]
@@ -15,3 +16,4 @@ deps =
 	coverage
 commands =
 	python -m unittest
+	coverage run python -m unittest
