--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ skipsdist=True
 deps =
     flake8
 commands =
-	flake8 --exclude=migrations,venv,.tox --count --show-source 
+	flake8 --exclude=migrations,venv,.tox --count --show-source --ignore=E501
 
 
 [testenv:test]
